--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.22"
+    "bootstrap": "4.3.1",
+    "jquery": "3.4.1",
+    "popper.js": "1.15.0",
+    "vue": "^2.5.22",
+    "vuex": "3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.6.0",
